--- a/navtime.html
+++ b/navtime.html
@@ -18,6 +18,6 @@
   </head>
   <body onload="measureCRP()">
     <p>The <span>Witcher 3</span> is awesome!</p>
-    <div><img src="witcher-photo.jpg" height="42" width="42"></div>
+    <img src="witcher-photo.jpg" height="42" width="42">
   </body>
 </html>
