--- a/navtime.html
+++ b/navtime.html
@@ -47,7 +47,19 @@
      <p> The remaining standard performance stats </p>
      <input type="button" onclick="stdperfstats()" value="Click here"/>
      
-      javascript:(function(){var script=document.createElement('script');script.onload=function(){var stats=new Stats();document.body.appendChild(stats.dom);requestAnimationFrame(function loop(){stats.update();requestAnimationFrame(loop)});};script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);})()
+function(){
+var script=document.createElement('script');
+script.onload=function()
+{
+var stats=new Stats();document.body.appendChild(stats.dom);
+requestAnimationFrame(function loop()
+{
+stats.update();
+requestAnimationFrame(loop)
+};
+};
+script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);
+}
      
   </body>
 </html>
