--- a/navtime.html
+++ b/navtime.html
@@ -45,21 +45,9 @@
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
-     <input type="button" onclick="stdperfstats()" value="Click here"/>
+     <"stdperfstats()>
      
-function(){
-var script=document.createElement('script');
-script.onload=function()
-{
-var stats=new Stats();document.body.appendChild(stats.dom);
-requestAnimationFrame(function loop()
-{
-stats.update();
-requestAnimationFrame(loop)
-};
-};
-script.src='//rawgit.com/mrdoob/stats.js/master/build/stats.min.js';document.head.appendChild(script);
-}
+
      
   </body>
 </html>
