--- a/navtime.html
+++ b/navtime.html
@@ -45,7 +45,7 @@
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
-     <"stdperfstats()>
+     <"stdperfstats()">
      
 
      
