--- a/navtime.html
+++ b/navtime.html
@@ -28,7 +28,7 @@
           domContentLoadedEventStart = s.domContentLoadedEventStart , domContentLoadedEventEnd = s.domContentLoadedEventEnd , 
           domComplete = s.domComplete , loadEventStart = s.loadEventStart , loadEventEnd = s.loadEventEnd;
           var stats = document.createElement('q');
-        stats.textContext = 'navigationStart: ' + navigationStart, 'unloadEventStart: ‘ + unloadEventStart, 
+        stats.textContext = 'navigationStart: ' + navigationStart, 'unloadEventStart:'  + unloadEventStart, 
           'unloadEventEnd: ' + unloadEventEnd, 'unloadEventEnd:'  + unloadEventEnd, 'redirectStart:'  + redirectStart ,
           'redirectEnd:' + redirectEnd, 'fetchStart:' + fetchStart, 'domainLookupStart:' + domainLookupStart, 
           'domainLookupEnd:'  + domainLookupEnd, 'connectStart:' + connectStart, 'connectEnd:' + connectEnd, 'connectEnd:'+ connectEnd, 
