--- a/navtime.html
+++ b/navtime.html
@@ -41,7 +41,8 @@
     </script>
      
   </head>
-  <body onload="measureCRP()" "stdperfstats()">
+  <body onload="measureCRP()">
+  <body onload="stdperfstats()"></body>  
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
