--- a/navtime.html
+++ b/navtime.html
@@ -11,7 +11,7 @@
           pageLoadTime = t.loadEventEnd - t.navigationStart;
           var stats = document.createElement('p');
         stats.textContent = 'interactive: ' + interactive + 'ms, ' +
-            'Document complete: ' + dcl + 'ms, complete: ' + complete + 'ms,' 'pageLoadTime:' +pageLoadTime + 'ms';
+            'Document complete: ' + dcl + 'ms, complete: ' + complete + 'ms, pageLoadTime:' +pageLoadTime + 'ms';
         document.body.appendChild(stats);
       }
     </script>
