--- a/navtime.html
+++ b/navtime.html
@@ -35,7 +35,7 @@
           'secureConnectionStart:' + secureConnectionStart+ 'requestStart:'  + requestStart+ 'responseStart:' + responseStart +
           'responseEnd:' + responseEnd+ 'domLoading:' + domLoading+ 'domInteractive:'  + domInteractive+ 
           'domContentLoadedEventStart:' + domContentLoadedEventStart+ 'domContentLoadedEventEnd:' + domContentLoadedEventEnd+ 
-          'domComplete:'+ domComplete+ 'loadEventStart:' + loadEventStart+'loadEventEnd:' + loadEventEnd ;
+          'domComplete:'+ domComplete+ 'loadEventStart:' + loadEventStart+'loadEventEnd:' + loadEventEnd + ;
           document.body.appendChild(stat);
       }
     </script>
