--- a/navtime.html
+++ b/navtime.html
@@ -30,7 +30,7 @@
     </script>
      
   </head>
-  <body onload="stdperfstats()">
+  <body onload="measureCRP()">
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
