--- a/navtime.html
+++ b/navtime.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="style.css" rel="stylesheet">
     <script>
-      function measureCRP() {
+      function measureperf() {
         var t = window.performance.timing,
           interactive = t.domInteractive - t.domLoading,
           dcl = t.domContentLoadedEventStart - t.domLoading, complete = t.domComplete - t.domLoading , 
@@ -30,7 +30,7 @@
     </script>
      
   </head>
-  <body onload="measureCRP()">
+  <body onload="measureperf()">
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
