--- a/navtime.html
+++ b/navtime.html
@@ -22,6 +22,7 @@
   <body onload="measureperf()">
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
+     <img src="witcher-party.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
   </body>
 </html>
