--- a/navtime.html
+++ b/navtime.html
@@ -19,10 +19,18 @@
 
      
   </head>
+  
   <body onload="measureperf()">
+    <iframe src="http://www.akamai.com/" width="49%" height="300">
+    <p>Your browser does not support iframes.</p>
+    </iframe>
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <img src="witcher-party.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
   </body>
 </html>
+
+
+
+
