--- a/navtime.html
+++ b/navtime.html
@@ -21,7 +21,7 @@
   </head>
   
   <body onload="measureperf()">
-    <iframe src="http://www.akamai.com/" width="49%" height="300">
+    <iframe src="https://www.akamai.com/" width="49%" height="300">
     <p>Your browser does not support iframes.</p>
     </iframe>
     <p>The <span>Witcher 3</span> is awesome!</p>
