--- a/navtime.html
+++ b/navtime.html
@@ -21,8 +21,7 @@
   </head>
   
   <body onload="measureperf()">
-    <iframe src="http://www.bing.com/" width="40%" height="250" float:right>
-    <p>Your browser does not support iframes.</p>
+    <iframe src="http://www.reddit.com/" width="40%" height="250" float:right>
     </iframe>
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
