--- a/navtime.html
+++ b/navtime.html
@@ -21,12 +21,11 @@
   </head>
   
   <body onload="measureperf()">
-    <iframe src="http://www.reddit.com/" width="40%" height="250" float:right>
-    </iframe>
     <p>The <span>Witcher 3</span> is awesome!</p>
      <img src="witcher-photo.jpg" height="480" width="720">
      <img src="witcher-party.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
+     <iframe src="http://www.reddit.com/"></iframe>
   </body>
 </html>
 
