--- a/navtime.html
+++ b/navtime.html
@@ -25,7 +25,7 @@
      <img src="witcher-photo.jpg" height="480" width="720">
      <img src="witcher-party.jpg" height="480" width="720">
      <p> The remaining standard performance stats </p>
-     <iframe src="http://www.reddit.com/"></iframe>
+     <iframe src="https://www.reddit.com/"></iframe>
   </body>
 </html>
 
