--- a/navtime.html
+++ b/navtime.html
@@ -22,8 +22,10 @@
   
   <body onload="measureperf()">
     <p>The <span>Witcher 3</span> is awesome!</p>
-     <img src="witcher-photo.jpg" height="480" width="720">
-     <img src="witcher-party.jpg" height="480" width="720">
+ <!--   <img src="witcher-photo.jpg" height="480" width="720">
+    <img src="witcher-party.jpg" height="480" width="720"> -->
+    <img src="nab1.jpg>
+    <img src="nab2.jpg>                        
      <p> The remaining standard performance stats </p>
   </body>
 </html>
