--- a/nabprog.html
+++ b/nabprog.html
@@ -24,7 +24,7 @@
     <p>The <span>HERO Image</span> progressive!</p>
  <!--   <img src="witcher-photo.jpg" height="480" width="720">
     <img src="witcher-party.jpg" height="480" width="720"> -->
-    <img src="nab2.jpg">                    
+    <img src="http://im-testing.download.akamai.com/358688/testimages/nab2.jpg">                    
      <p> The remaining standard performance stats </p>
   </body>
 </html>
