--- a/nabnonprog.html
+++ b/nabnonprog.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Nav Timings</title>
+    <title>Non Progressive</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="style.css" rel="stylesheet">
     <script>
@@ -21,10 +21,14 @@
   </head>
   
   <body onload="measureperf()">
-    <p>The <span>HERO Image</span> non-progressive!</p>
- <!--   <img src="witcher-photo.jpg" height="480" width="720">
-    <img src="witcher-party.jpg" height="480" width="720"> -->
-    <img src="nab1.jpg">                    
+    <p>The HERO Image<span> are non progressive </span></p>
+    <div id="partners">
+    <div class="logo-image"><img src="nab1.jpg"></div>
+    <div class="logo-image"><img src="nab3.jpg"></div>
+    <div class="logo-image"><img src="nab5.jpg"></div>
+    <div class="logo-image"><img src="nab7.jpg"></div>
+    <div class="logo-image"><img src="nab9.jpg"></div>   
+    </div>
      <p> The remaining standard performance stats </p>
   </body>
 </html>
